--- a/views/menu.xml
+++ b/views/menu.xml
@@ -4,6 +4,7 @@
   <menuitem id="hospital_root_menu" name="Dog Hospital" sequence="0" />
   <menuitem id="patient_root_menu" name="Patient Details" parent="hospital_root_menu"
     sequence="0" />
-  <menuitem id="patient_menu" name="Patient" parent="patient_root_menu" sequence="0" />
+  <menuitem id="patient_menu" name="Patient" parent="patient_root_menu" sequence="0"
+    action="dog_hospital.hospital_patient_action" />
 
 </odoo>
