--- a/views/menu.xml
+++ b/views/menu.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
 
-  <menuitem id="hospital_root_menu" name="Dog Hospital" sequence="0" />
+  <menuitem id="hospital_root_menu" name="Dog Hospital"
+    web_icon="dog_hospital,static/description/icon.png" sequence="0" />
   <menuitem id="patient_root_menu" name="Patient Details" parent="hospital_root_menu"
     sequence="0" />
-  <menuitem id="patient_menu" name="Patient" parent="patient_root_menu" sequence="0"
-    action="dog_hospital.hospital_patient_action" />
 
 </odoo>
