--- a/views/patient_view.xml
+++ b/views/patient_view.xml
@@ -1,6 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
 
+  <record id="hospital_patient_view_tree" model="ir.ui.view">
+    <field name="name">hospital.patient.view.tree</field>
+    <field name="model">hospital.patient</field>
+    <field name="arch" type="xml">
+      <tree string="Patients">
+        <field name="name" />
+        <field name="gender" />
+        <field name="age" />
+      </tree>
+    </field>
+  </record>
+
   <record id="hospital_patient_view_form" model="ir.ui.view">
     <field name="name">hospital.patient.view.form</field>
     <field name="model">hospital.patient</field>
