--- a/views/patient_view.xml
+++ b/views/patient_view.xml
@@ -8,6 +8,7 @@
       <tree string="Patients">
         <field name="name" />
         <field name="gender" />
+        <field name="reference" />
         <field name="age" />
       </tree>
     </field>
@@ -28,6 +29,7 @@
           <group>
             <group>
               <field name="gender" />
+              <field name="reference" />
             </group>
             <group>
               <field name="age" />
