--- a/views/patient_view.xml
+++ b/views/patient_view.xml
@@ -8,7 +8,7 @@
       <tree string="Patients">
         <field name="name" />
         <field name="gender" />
-        <field name="reference" />
+        <field name="ref" />
         <field name="age" />
       </tree>
     </field>
@@ -29,7 +29,7 @@
           <group>
             <group>
               <field name="gender" />
-              <field name="reference" />
+              <field name="ref" />
             </group>
             <group>
               <field name="age" />
@@ -46,7 +46,7 @@
     <field name="arch" type="xml">
       <search string="Patients">
         <field name="name" />
-        <field name="reference" />
+        <field name="ref" />
         <field name="gender" />
         <field name="age" />
       </search>
