--- a/views/patient_view.xml
+++ b/views/patient_view.xml
@@ -45,7 +45,9 @@
     <field name="model">hospital.patient</field>
     <field name="arch" type="xml">
       <search string="Patients">
-        <field name="name" />
+        <field name="name"
+          filter_domain="['|', ('name', 'ilike', self), ('ref', 'ilike', self)]"
+        />
         <field name="ref" />
         <field name="gender" />
         <field name="age" />
