--- a/views/patient_view.xml
+++ b/views/patient_view.xml
@@ -56,6 +56,9 @@
         <filter name="filter_female" string="Female" domain="[('gender', '=', 'female')]" />
         <separator />
         <filter name="filter_Kids" string="Kids" domain="[('age', '&lt;=', 5)]" />
+        <group expand="0" string="Group By">
+          <filter name="group_by_gender" string="Gender" context="{'group_by': 'gender'}" />
+        </group>
       </search>
     </field>
   </record>
