add active field to archive patients

--- a/views/patient_view.xml
+++ b/views/patient_view.xml
@@ -33,6 +33,7 @@
             </group>
             <group>
               <field name="age" />
+              <field name="active" invisible="1" />
             </group>
           </group>
         </sheet>
