--- a/views/patient_view.xml
+++ b/views/patient_view.xml
@@ -57,6 +57,8 @@
         <filter name="filter_female" string="Female" domain="[('gender', '=', 'female')]" />
         <separator />
         <filter name="filter_Kids" string="Kids" domain="[('age', '&lt;=', 5)]" />
+        <separator />
+        <filter name="filter_archived" string="Archived" domain="[('active', '=', False)]" />
         <group expand="0" string="Group By">
           <filter name="group_by_gender" string="Gender" context="{'group_by': 'gender'}" />
         </group>
