add context to female patient action

--- a/views/female_patient_view.xml
+++ b/views/female_patient_view.xml
@@ -6,7 +6,7 @@
     <field name="res_model">hospital.patient</field>
     <field name="view_mode">tree,form</field>
     <field name="domain">[('gender', '=', 'female')]</field>
-    <field name="context">{}</field>
+    <field name="context">{'default_gender':'female'}</field>
     <field name="help" type="html">
       <p class="o_view_nocontent_smiling_face">
         Create your first female patient.
