--- a/views/patient_view.xml
+++ b/views/patient_view.xml
@@ -70,7 +70,7 @@
     <field name="name">Patients</field>
     <field name="res_model">hospital.patient</field>
     <field name="view_mode">tree,form</field>
-    <field name="context">{}</field>
+    <field name="context">{'search_default_filter_male':True}</field>
     <field name="help" type="html">
       <p class="o_view_nocontent_smiling_face">
         Create your first patient.
