--- a/views/patient_view.xml
+++ b/views/patient_view.xml
@@ -37,6 +37,12 @@
             </group>
           </group>
         </sheet>
+        <!-- Chatter -->
+        <div class="oe_chatter">
+          <field name="message_follower_ids" groups="base.group_user" />
+          <field name="activity_ids" />
+          <field name="message_ids" />
+        </div>
       </form>
     </field>
   </record>
