--- a/views/appointment_view.xml
+++ b/views/appointment_view.xml
@@ -7,6 +7,8 @@
     <field name="arch" type="xml">
       <tree string="Appintments">
         <field name="patient_id" />
+        <field name="appointment_time" />
+        <field name="booking_date" />
       </tree>
     </field>
   </record>
@@ -19,6 +21,8 @@
         <sheet>
           <group>
             <field name="patient_id" />
+            <field name="appointment_time" />
+            <field name="booking_date" />
           </group>
         </sheet>
       </form>
@@ -31,6 +35,8 @@
     <field name="arch" type="xml">
       <search string="Appointments">
         <field name="patient_id" />
+        <field name="appointment_time" />
+        <field name="booking_date" />
       </search>
     </field>
   </record>
