add chatter to appointment form view

--- a/views/appointment_view.xml
+++ b/views/appointment_view.xml
@@ -28,6 +28,12 @@
             <field name="booking_date" />
           </group>
         </sheet>
+        <!-- Chatter -->
+        <div class="oe_chatter">
+          <field name="message_follower_ids" groups="base.group_user" />
+          <field name="activity_ids" />
+          <field name="message_ids" />
+        </div>
       </form>
     </field>
   </record>
