--- a/views/appointment_view.xml
+++ b/views/appointment_view.xml
@@ -34,6 +34,7 @@
           </group>
           <notebook>
             <page name="prescription" string="Prescription">
+              <field name="prescription" placeholder="Enter your prescription" />
             </page>
             <page name="pharmacy" string="Pharmacy">
             </page>
