add confirm to cancel button

--- a/views/appointment_view.xml
+++ b/views/appointment_view.xml
@@ -21,7 +21,7 @@
       <form string="Appointment">
         <header>
           <button string="Cancel" name="action_cancel" type="object" class="oe_highlight"
-            states="draft,in_consultation,done" />
+            states="draft,in_consultation,done" confirm="Are you sure to cancel this appointment?" />
           <field name="state" widget="statusbar" statusbar_visible="draft,in_consultation,done"
             options="{'clickable': True}"
           />
